# LCE

./: .gitattributes  .gitignore  API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_COMPONENTS.md  CURRENT_STATUS.md  DOCUMENTATION_INDEX.md  EVALUATION_HOLDOUT_PLAN.md  EVALUATION_POLICY.md  GEMMA4_E4B_REFERENCE.md  LICENSE  LICENSE_POLICY.md  OPEN_CORE_SDK.md  OPEN_SOURCE_ROADMAP_JA.md  ORGANIZATIONAL_USE.md  OVERVIEW.md  PACK_TRUST.md  PERFORMANCE.md  PIP_INSTALL.md  PORTABILITY.md  PUBLIC_PACKAGE_MANIFEST.md  QUICKSTART.md  README.md  README_JA.md  README_REBUILT_JA.md  REFERENCE_APP.md  RELEASE_NOTES_v0.1.0-alpha.1.md  RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_READINESS.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
evaluation/: holdout_manifest_v1.json
examples/: api_client_demo.py  gemma4_e4b_reference_cases_v1.json  gemma4_e4b_reference_demo.py  quickstart_open_core.py  reference_assurance_gateway.py
lce_validation/: __init__.py  __main__.py  api_server.py  cli.py  open_core.py  schema_tools.py  web_ui.py
profiles/: gemma4_e4b_reference_profile_v1.json
scripts/: build_release_archive.py  verify_holdout_manifest.py  verify_public_tree.py  verify_release_candidate.py
tests/: test_accept_c_reducer.py  test_acceptance_challenge.py  test_acceptance_challenge_benchmark.py  test_adaptive_renderer.py  test_api_server.py  test_baseline_comparison.py  test_candidate_assurance.py  test_candidate_assurance_benchmark.py  test_capability_negotiation.py  test_chunked_dialogue.py  test_coding_knowledge_corpus.py  test_coding_task_runner.py  (+122 more)
(+247 files in other folders)
