[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lce-open-core"
version = "0.1.0a0"
description = "Experimental, data-only Open Core contracts for LCE"
readme = "OPEN_CORE_SDK.md"
requires-python = ">=3.11"
license = {text = "LCE Personal and Organizational Use License, Version 1.0"}
authors = [{name = "LCE maintainers"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["lce_validation*"]
